[workspace]
resolver = "3"
members = ["crates/llm-guard", "crates/llm-guard-ml"]

# Profile settings apply workspace-wide. The previous per-crate
# profiles in crates/llm-guard/Cargo.toml are now ignored by cargo
# when the crate is built as a workspace member, so we hoist them
# here to keep the same dev/test/release tuning across the workspace.

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.test]
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
overflow-checks = false
